# webringer

./: .sqlfluff  Cargo.toml  README.md
.sqlx/: query-21481e184e02e119f45f7757dc502981ec488e1d72cecd57c82a93864d9c1ac2.json  query-2253dc91377dcf06a68f41bb0e165cc54add84c5d036227a1761fca89519a861.json  query-5a9cf7fd0d785e86842147dd75d237a945181a7afedc125a70aa01c7ce23a980.json  query-6b5e78a8b33d3c82ea025b903ccb7cbb197c0d620bda430fda2d71f4a008cf3d.json  query-799308a604e8626dbd400c9213ce56f9a8b10ef36cf72697193a8c25c7be3fb4.json  query-88c52600efb52e6fd4af430310004682dd49ff3281d1fb6de18d6922f4a0b649.json  query-8909dd4e04ac6b99295079ce1eb515ab2a0f15cd6c83a25b75da883feac7cd7b.json  query-92fac4cd6b8adbeab4f58fe5fa07413fa67d7518575c27bdf6ab71213f9ba084.json  query-a3560ad38c22477d001e505d1109c44c4f91fc29025f17e7cff6e4c6ac0a36bc.json  query-a8eb13177d24360d793bd65d8be2547e4356a30dc746c66dfd35d3cfb9650135.json  query-fe09ca58a62791cf94b7a3c84f349945030da01e9f22fc721395e407e45b8973.json
migrations/: 20250509122147_create_db.sql  20250510101413_remove_verification_key_verified_sites.sql  20250514113546_default-admin-user.sql  20250515134552_add-id-to-unverified-view.sql
src/: args.rs  database.rs  embed.rs  lib.rs  main.rs
src/ring/: auth.rs  mod.rs
src/site/: admin.rs  join.rs  leave.rs  login.rs  mod.rs  ring.rs
src/site/admin/: account.rs  add.rs  approve.rs  deny.rs  login.rs  mod.rs  verify.rs
src/site/admin/account/: change_password.rs  mod.rs
static/: 404.html  index.html
static/css/: style.css
templates/: base.html  index.html  join.html  list.html  login.html
templates/admin/: account.html  add.html  landing_page.html  sites_view.html
templates/admin/account/: change-password.html
