[package]
name = "webringer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "http1", "query", "form"] }
axum-login = "0.18.0"
axum-messages = "0.8.0"
clap = { version = "4.5.46", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "migrate"] }
tokio = { version = "1.47.1", features = ["signal"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tower-sessions = { version = "0.14.0", features = ["memory-store"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
thiserror = "2.0.16"
argon2 = "0.5.3"
askama = "0.14.0"
sha2 = "0.10.9"
hex = "0.4.3"
ureq = "3.1.0"
